assets/css/style.css
/*---------------------------------------Fonts*/

@import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

@font-face {
    font-family: 'gloss';
    src:    url('../fonts/gloss.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
/*---------------------------------------General formatting*/
.header-row {
    width: 100%;
    text-align: center;
    padding-top:50px;
}
/*---------------------------------------Heading*/

header {
    margin: 0;
    }
.heading{
    height: 70px;
    width: 100%;
    
}
.header-bar {
    padding: 0;
    background-color:#000 ;
    height:70px;
}

.menu-heading-left {
    display: inline-block;
    height: 65px;
    width: 40%;
    padding-right: 0px;
    padding-top: 15px;
    padding-bottom: 5px;
}
.menu-heading-left ul {
    display: flex;
    justify-content: space-between;
}
#nav-left {
    padding-top: 5px;
    padding-left: 10px;
    padding-bottom: 20px;
}


.menu-heading-right {
    display: inline-block;
    height: 65px;
    width:30%;
    padding-left: 0px;
    padding-right: 15px;
    padding-top: 15px;
    padding-bottom: 5px;
}
#nav-right {
    padding-top: 5px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 15px;
}
.menu-heading-right ul {
    display: flex;
    justify-content: space-between;
}


.logo-header {
    width: 20%;
    text-align: center;
    padding-top: 2px;
}

#logo-header {
    position: relative;
    max-height: 60px;
    max-width: 150px;
}

.list-inline>li a {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    letter-spacing: 1px;
    font-weight: 400;
    color: #fafafa;
    font-size: 20px;
    padding-top: 30px;
    padding-left: 10px;
}
#calendar {
    color: #fafafa;
}

/*---------------------------------------Hero Image*/
.hero-image-box {
    background-image: url(../images/hero-image.png);
    background-size: cover;
    background-attachment: fixed;
    height: 1000px;
}


}
/*---------------------------------------About us Section*/
.Aboutus-section {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #1b1c1b;
    text-align: justify;
}
.section-header {
    font-family: gloss;
    width:100%;
    letter-spacing: 3px;
    color: #1b1c1b;
    font-size: 5em;
    text-align: center;
    padding-top:2.5%;
    padding-bottom:80px;
}

#about-workouts, #about-movement, #about-community {
    font-family: gloss;
    letter-spacing: 3px;
    color: #1b1c1b;
    font-size: 2em;
    text-align: center;
    padding-top:10%;
}
.aboutus-item p {
    padding-top: 10px;
    padding-right: 30px;
    padding-left: 30px;
}
/*---------------------------------------Video Promo Section*/
.youtubeplayer {
    text-align: center;
    padding-top:100px;
    padding-bottom: 100px;
    margin:0, 1.5em;
}

/*---------------------------------------Gallery Section*/

.row-gallery {
   padding-top: 50px;
   background-color: #000;
   justify-content: center;
}
#gallery-section h1{
        color: #fff;
}

.gallery-image-col {
    padding: 0;
}
.gallery-image-col ul{
    max-width: 100%;
    list-style: none;
    justify-content: center;
}
#gallery-section img {
    max-width: 95%;
    padding-bottom: 60px;
}

/*---------------------------------------Prices Section*/
.card-deck {
    justify-content: space-evenly;
    margin-left: 15px;
    margin-right: 15px;
}
.card {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 18px;
    max-width: 250px;
}
.card-title {
    font-family: gloss, sans-serif;
    color: #ffffff;
    padding-top: 15px;
    text-align: center;
    background-color: #333333;
    margin:0;
    height: 50px;
}
.card-footer {
    text-align: center;
}

.pricing-row {
    width: 100%;
    display: inline-block;

}

.pricing-items {
    padding-top: 50px;
    float: none;
    padding-right: 0;
}

.subheader-box {
    height: 80px;
    background-color: #333333;
    
}
.pricing-box h3 {
    font-family: gloss, Roboto;
    color: #fafafa;
    background-color: #333333;
    margin: 0;
    text-align: center;
    height: 100%;
    padding-top:30px;
}

.pricing-box {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: lighter;
    font-size: 16pt;
    letter-spacing: 0.75px;
    display: inline-block;
    border:#1b1c1b;
    border-width: 2px;
    border-style: solid;
    padding: 0;
    margin-left: 4.5%;
}

.card-body ul {
    height: 60%;
    line-height: 45px;
    text-align:center;
    padding-top: 0;
    padding-left:0;
    margin-bottom: 0;
}

.card-body ul li {
    padding-left: 7px;
    list-style: none;
}

/*---------------------------------------Contact Us & Map Section*/
#Contact-Map {
    width:100%;
    margin-top: 50px;
    background-color:#000;
    padding-top: 80px;
    display: inline-flex;
    justify-content: center;
}
.form-column {
    margin-left: 0;
    
}
.form-column form {
    background-image: url(../images/gym11.jpg);
    background-size: cover;
    height:425px;
    padding: 30px;
    padding-top:40px;
    border: 1px solid;
    border-color: rgba(0,0,0,.125);
    max-width: 625px;
    }

.form-column input {
    opacity: 80%;
}

#inputmessage3 {
    height: 200px;
}

#map {
    margin-left: 5em;
}
.social-feeds { 
    background-color: #f2f2f2;
    margin-left:5em;
    height: 195px;
    z-index: 1;

}
.social-heading {
    font-family: gloss;
    color: #1b1c1b;
    text-align: left;
    line-height: 50px;
    padding-left: 20px;
    
}
.social-links { 
    margin-top:45px; 

}
.social-links i {
    font-size: 45px;
    color:#1b1c1b;
    padding-top: 30px;
    padding-left:0;
    
}

#socialimage {
    max-width: 100%;
    margin-top: 20px;
}

/*----------------------------------Media Queries*/


@media screen and (max-width: 768px) {
.menu-heading-col {
    width: 40%;
    text-align: left;
    padding-top: 10px;
    margin-left: 15px;
}
.logo-header img {
    width: 50%;
}
#logo-header {
    max-width: 90px;
    padding-top: 5px;

}
.menu-heading-calendar {
    width: 50%;
    padding-top: 18px;
    text-align: right;
    
}
.menu-heading-calendar img {
    max-height:50px;
    max-width: 35px;
    align-self: right;
}
.hero-image-box {
    background-image: url(../images/hero-image-mob.jpg);
    background-size: cover;
    background-attachment: fixed;
    height: 800px;
}
.section-header {
    font-family: gloss;
    letter-spacing: 3px;
    color: #000000;
    font-size:2em;
    padding-bottom: 30px;
}
#about-movement, #about-workouts, #about-community {
    font-size: 1.5em;
}
.youtubeplayer {
    max-width: 100%;
}
#gallery-section img {
    max-width: 90%;
    padding-bottom: 30px;
    
}
.card-deck {
    display: inline-grid;
    width: 100%;
    margin: 0;
    justify-items: center;
}
.card {
    width:286px;
    margin-bottom:40px;
    align-self: auto;
}


.contactus-form {
    max-height: 425px;
    margin-left: 10%;
}
.form-column {
    margin: 1em;
    
}
.form-column form {
    height: 550px;
}

#map {
    margin: 1em;
}


.social-feeds { 
    margin:1em;
    height: 130px;
}
.social-links { 
    margin-top:5px; 
}
.social-links i {
    font-size: 25px;
    padding-top: 30px;
    margin: 0;
}
#socialicons {
    max-width: 75%;
}
#socialimage {
    max-width: 80%;
    margin-left: 0;
    margin-top: 2px;
}

